@@ -37,6 +37,8 @@ version 2.0.0:
 	* Attempt to detect the file type of a buddy icon when saving
 	  (Richard Laager)
 	* Yahoo! Stealth Settings have been implemented.
+	* The modify account dialog now contains two tabs, which should display
+	  better at lower resolutions (Sadrul Habib Chowdhury)
 
 	Bug fixes:
 	* People using input methods can now use Enter again.
